# cubescape

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
assets/shaders/: main.fs  main.vs
assets/tilemaps/: default.tilemap
include/core/: file.h  input.h  log.h  math.h
include/graphics/: buffer.h  camera.h  image.h  mesh.h  renderer.h  shader.h  shader_program.h  texture.h  tilemap.h  vertex_array.h  window.h
include/world/: block.h  chunk.h  world.h
src/: CMakeLists.txt  main.c
src/core/: file.c  input.c  log.c  profiling.c
src/cubegl/: CMakeLists.txt
src/cubelog/: CMakeLists.txt
src/cubescape/: CMakeLists.txt
src/cubescape/include/collections/: llist.h
src/cubescape/include/core/: math.h  profiling.h  thread.h
src/cubescape/include/graphics/: camera.h  mesh.h  renderer.h  shader_program.h  texture.h  tilemap.h  vertex.h
src/cubescape/include/world/: chunk.h  generator.h  ray.h  world.h  world_renderer.h
src/cubescape/include/world/noise/: combined_noise.h  noise.h  octave_noise.h  perlin_noise.h
src/cubescape/src/: main.c
src/cubescape/src/collections/: llist.c
src/cubescape/src/core/: file.c  input.c  profiling.c  thread.c
src/cubescape/src/graphics/: buffer.c  camera.c  mesh.c  renderer.c  texture.c  tilemap.c  window.c
src/cubescape/src/world/: block.c  chunk.c  generator.c  ray.c  world.c  world_renderer.c
src/cubescape/src/world/noise/: combined_noise.c  octave_noise.c  perlin_noise.c
src/graphics/: buffer.c  camera.c  image.c  mesh.c  renderer.c  shader.c  shader_program.c  texture.c  tilemap.c  vertex_array.c  window.c
(+15 files in other folders)
